# WAMCtrl-genom3

./: .gitignore  Makefile.am  README.md  README_API.adoc  configure.ac  wamctrl-genom3-uninstalled.pc.in  wamctrl-genom3.pc.in  wamctrl.gen
autoconf/: ag_templates.m4
codels/: Makefile.am  codels.h  controller.cc  geometry.cc  pinocchio_codels.cc  wamctrl_codels.c  wamctrl_main_codels.c
example_files/: example_plus_arm.world  tilthex_plus_arm_primitive_pinocchio.urdf
example_files/mrsim-tilthex-plus-arm/: model.sdf
